优化配置项

--- a/.docker/nginx/laravel.conf
+++ b/.docker/nginx/laravel.conf
@@ -1,3 +1,7 @@
+upstream api_server {
+ server app:9000;
+}
+
 server {
   listen 80;
   root /var/www/public;
@@ -11,6 +15,7 @@ server {
       try_files $uri $uri/ /index.php?$query_string;
       gzip_static on;
   }
+
 
   location ~ .*\.php(\/.*)*$ {
     try_files $uri =404;
