添加用户组

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,10 +3,14 @@ services:
     app:
         build:
             args:
-                - user=kanelli
+                - user=appuser
+                - group=appuser
                 - uid=1000
+                - gid=1000
             context: ./
             dockerfile: Dockerfile
+        env_file:
+            -   .env
         container_name: app
         restart: unless-stopped
         working_dir: /var/www
