--- a/composer.json
+++ b/composer.json
@@ -7,6 +7,7 @@
     "require": {
         "php": "^8.1",
         "ext-pdo": "*",
+        "beyondcode/laravel-websockets": "^1.14",
         "dcat/laravel-admin": "2.2.2-beta",
         "guzzlehttp/guzzle": "^7.0.1",
         "kanelli/graph-validate-code": "dev-master",
