--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,8 @@
         "maatwebsite/excel": "^3.1",
         "nunomaduro/collision": "^6.1",
         "predis/predis": "^2.1",
-        "spatie/laravel-ignition": "^1.0"
+        "spatie/laravel-ignition": "^1.0",
+        "qcloud/cos-sdk-v5": "2.*"
     },
     "require-dev": {
         "mockery/mockery": "^1.4.4",
